fix spacing in css

--- a/Misterio/src/css/report.css
+++ b/Misterio/src/css/report.css
@@ -26,7 +26,7 @@
 .column-mis, .column-te, .column-rio, .solution-box{
     float: left;
     width: 50%;
-    height: 50%;
+    height: 170px;
 }
 
 
